--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
     "vite": "^7.0.2"
+  },
+  "engines": {
+    "node": "20.x"
   }
+
+
 }
