--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "rollup": "^4.15.0",
+    "vite": "^5.2.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -26,10 +28,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
     "vite": "^7.0.2"
-  },
-  "engines": {
-    "node": "20.x"
   }
-
 
 }
